# IRL-RC-SimRacing

./: CMakeLists.txt  Makefile  README.md
pc/: cam.sdp  config.ini  rc_sender.py  test_joysticks.py  video_receiver.py
src/: pca9685_motor.cpp  pca9685_servo.cpp  rc_daemon.cpp  video_sender.cpp
